# ctt_client

./: Cargo.toml  build.rs
pyctt/: dump_schema.py  example.py  requirements.txt
src/: cli.rs  lib.rs  main.rs
src/queries/: get_issue.rs  list_issues.rs  mod.rs  version.rs
