[package]
name = "ctt"
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Graphql api for CTT"
repository = "https://github.com/Will-Shanks/ctt_client"

[dependencies]
chrono = {version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
graphql_client = { version = "0.14", features = ["reqwest-blocking"] }
munge_auth = "0.1.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = "1"
serde_json = "1"
users = "0.11"

[build-dependencies]
chrono = {version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "cargo", "env"] }
clap_complete = "4"
clap_mangen = "0.2"
serde = "1"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ctt", dest = "/opt/ncar/bin/ctt", mode = "755" },
    { source = "target/assets/man/man1/*", dest = "/opt/ncar/man/man1/", mode = "644", doc = true },
    { source = "target/assets/bash-completions/completions/*", dest = "/opt/ncar/bash-completions/completions/", mode = "644" }
]

